fix task after review

--- a/Essential/002_LogicalStruct_HomeWork.htm
+++ b/Essential/002_LogicalStruct_HomeWork.htm
@@ -6,7 +6,7 @@
 
     <script>
         document.write("Доп задание");
-        document.write("<hr/>");
+        document.write("");
 
         var a = 6, b = 8;
         for (var i = 0; i < a; i++) {
@@ -15,7 +15,7 @@
             }
             document.write("<br/>");
         }
-        document.write("<hr/>");
+        document.write("");
 
         document.write("Задание 2 <br/>");
         var A = 1, B = 17;
@@ -30,7 +30,7 @@
         document.write("<br/>");
         document.write("Сумма чисел между А=" + A + " и В=" + B + " равна: " + sum);
         document.write("<br/>");
-        document.write("<hr/>");
+        document.write("");
 
         document.write("Задание 3 <br/>");
         var n = prompt("Введите число доставок:");
@@ -45,7 +45,7 @@
             n--;
         } while (n > 0);
         document.write("Число возможных вариантов доставки торава: " + numberDelivery + " <br/>");
-        document.write("<hr/>");
+        document.write("");
 
         document.write("Задание 4 <br/>");
         var l = 8, h = 6;
