--- a/Essential/003_Array_HomeWork.htm
+++ b/Essential/003_Array_HomeWork.htm
@@ -9,7 +9,7 @@
         document.write("Доп задание <br/>");
         var arr = [1, 2, 3, 4, 4, 8, 9, 10, 11, 11];
         document.write(arr.reverse());
-        document.write("<hr/><br/>");
+        document.write("<br/>");
         document.write("Задание 2 <br/>");
         
         var maxValue, minValue;
@@ -36,7 +36,7 @@
             }
         }
         
-        document.write("<hr/><br/>");
+        document.write("<br/>");
         document.write("Задание 3 <br/>");
         var matrix = Array(5);
         document.writeln("Исходный массив: <br/>");
